--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "imagemin-pngquant": "^8.0.0"
   },
   "dependencies": {
-    "gsap": "^2.1.3"
+    "gsap": "^2.1.3",
+    "wowjs": "^1.1.3"
   }
 }
