--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.26.7",
+    "fs": "0.0.1-security",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-babel": "^8.0.0",
+    "gulp-data": "^1.3.1",
     "gulp-imagemin": "^6.0.0",
     "gulp-notify": "^3.2.0",
     "gulp-postcss": "^8.0.0",
@@ -29,8 +31,10 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-swig": "^0.9.1",
     "gulp-webp": "^4.0.1",
-    "imagemin-pngquant": "^8.0.0"
+    "imagemin-pngquant": "^8.0.0",
+    "path": "^0.12.7"
   },
   "dependencies": {
     "gsap": "^2.1.3",
